# anvil-minijinja

./: Cargo.toml  README.md  build.rs
.github/workflows/: check.yml  test.yml
src/: lib.rs
src/extensions/: append.rs  generate.rs
