[package]
name = "anvil-minijinja"
version = "0.2.2"
edition = "2021"
homepage="https://github.com/anvil-rs/anvil"
description="Anvil wrapper for the minijinja liquid templating library"
license="MIT"
readme="./README.md"
repository="https://github.com/anvil-rs/anvil"

[dependencies]
anvil = "0.3.0"
minijinja = "2.8.0"
minijinja-embed = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3.15.0"

[build-dependencies]
minijinja-embed = "2.8.0"

